--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,43 @@
     transform: rotate(360deg);
   }
 }
+
+
+.gap-2{
+  display: flex;
+  gap:10px;
+}
+
+.new_todo_modal{
+  position:fixed;
+  top: 20%;
+  background:#fff;
+  border-radius: 2px;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -ms-border-radius: 2px;
+  -o-border-radius: 2px;
+  padding:20px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 99;
+}
+
+.backdrop_modal{
+  position:fixed;
+  width:100%;
+height:100%;
+padding: 20px;
+right: 0;
+top: 0;
+  background:#fff;
+  border-radius: 2px;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -ms-border-radius: 2px;
+  -o-border-radius: 2px;
+  padding:20px;
+  opacity: .6;
+  z-index: 9;
+}
